changing password and password-repeat inputs from text to password

--- a/front-side/login/sign-up.html
+++ b/front-side/login/sign-up.html
@@ -65,7 +65,7 @@
               <span class="label-input100">Email</span>
               <input
                 class="input100"
-                type="text"
+                type="email"
                 name="email"
                 placeholder="Email addess..."
               />
@@ -96,7 +96,7 @@
               <span class="label-input100">Password</span>
               <input
                 class="input100"
-                type="text"
+                type="password"
                 name="pass"
                 placeholder="*************"
               />
@@ -110,7 +110,7 @@
               <span class="label-input100">Repeat Password</span>
               <input
                 class="input100"
-                type="text"
+                type="password"
                 name="repeat-pass"
                 placeholder="*************"
               />
