--- a/front-side/home/homePage.html
+++ b/front-side/home/homePage.html
@@ -8,190 +8,247 @@
     <link rel="stylesheet" href="css/normilize.css" />
     <link rel="stylesheet" href="css/home.css" />
   </head>
-  <body class="home-page">
-    <aside class="home-page-access">
-      <a href="#" class="home-page-access__logo">
-        <img src="images/Twitter Logo2.png" alt="" />
-        <h2>Twitter</h2>
-      </a>
-      <a href="#">
-        <img src="images/home.svg" alt="" />
-        <p>Home</p>
-      </a>
-      <a href="#">
-        <img src="images/explore.svg" alt="" />
-        <p>Explore</p>
-      </a>
-      <a href="#">
-        <img src="images/withe-profile.svg" alt="" />
-        <p>Profile</p>
-      </a>
-      <a href="#">
-        <img src="images/more.svg" alt="" />
-        <p>More</p>
-      </a>
-      <button class="home-page-access__button">Tweet</button>
-    </aside>
-    <main class="home-page-body">
-      <header class="home-page-header">
-        <a href="#">about</a>
-        <a href="#">help</a>
-        <div class="home-page-header__search">
-          <button>
-            <img src="images/search.svg" alt="" />
-          </button>
-          <input
-            class="home-page-header__search--search-bar"
-            type="text"
-            placeholder="find on Twitter..."
-          />
-        </div>
-        <a href="#" class="home-page-header__profile">
-          <p>Hey, Amir</p>
-          <div><img src="images/profile.svg" alt="" /></div>
+  <body>
+    <div class="write-tweet">
+      <form class="new-tweet login100-form validate-form">
+        <main>
+          <textarea name="ntweet" id="newtweet" cols="100" rows="10"></textarea>
+        </main>
+        <footer class="container-login100-form-btn">
+          <div class="wrap-login100-form-btn">
+            <div class="login100-form-bgbtn"></div>
+            <button type="submit" class="login100-form-btn">Login</button>
+          </div>
+        </footer>
+      </form>
+    </div>
+    <div class="home-page">
+      <aside class="home-page-access">
+        <a href="#" class="home-page-access__logo">
+          <img src="images/Twitter Logo2.png" alt="" />
+          <h2>Twitter</h2>
         </a>
-      </header>
-      <main class="home-page-main">
-        <img class="home-page-main__picture" src="images/7.png" alt="" />
-        <div class="home-page-main__body">
-          <section class="home-page-main__profile-and-option">
-            <div class="home-page-main__profile">
-              <div>
-                <img src="images/profile.svg" alt="" />
+        <a href="#">
+          <img src="images/home.svg" alt="" />
+          <p>Home</p>
+        </a>
+        <a href="#">
+          <img src="images/explore.svg" alt="" />
+          <p>Explore</p>
+        </a>
+        <a href="#">
+          <img src="images/withe-profile.svg" alt="" />
+          <p>Profile</p>
+        </a>
+        <a href="#">
+          <img src="images/more.svg" alt="" />
+          <p>More</p>
+        </a>
+        <button class="home-page-access__button">Tweet</button>
+      </aside>
+      <main class="home-page-body">
+        <header class="home-page-header">
+          <a href="#">about</a>
+          <a href="#">help</a>
+          <div class="home-page-header__search">
+            <button>
+              <img src="images/search.svg" alt="" />
+            </button>
+            <input
+              class="home-page-header__search--search-bar"
+              type="text"
+              placeholder="find on Twitter..."
+            />
+          </div>
+          <a href="#" class="home-page-header__profile">
+            <p>Hey, Amir</p>
+            <div><img src="images/profile.svg" alt="" /></div>
+          </a>
+        </header>
+        <main class="home-page-main">
+          <img class="home-page-main__picture" src="images/7.png" alt="" />
+          <div class="home-page-main__body">
+            <section class="home-page-main__profile-and-option">
+              <div class="home-page-main__profile">
+                <div>
+                  <img src="images/profile.svg" alt="" />
+                </div>
+                <p>Amir Tarab</p>
+                <p class="home-page-main__profile--id">@kabootarenameresan</p>
+                <div>
+                  <img src="" alt="" />
+                  <p>Tehran, Iran</p>
+                </div>
+                <div>
+                  <span>
+                    <p>Tweets</p>
+                    <p>0</p>
+                  </span>
+                  <span>
+                    <p>Followers</p>
+                    <p>0</p>
+                  </span>
+                  <span>
+                    <p>Following</p>
+                    <p>0</p>
+                  </span>
+                </div>
               </div>
-              <p>Amir Tarab</p>
-              <p class="home-page-main__profile--id">@kabootarenameresan</p>
-              <div>
-                <img src="" alt="" />
-                <p>Tehran, Iran</p>
+              <div class="home-page-main__other-options">
+                <div>
+                  <img src="" alt="" />
+                  <p></p>
+                </div>
+                <div>
+                  <img src="" alt="" />
+                  <p></p>
+                </div>
+                <div>
+                  <img src="" alt="" />
+                  <p></p>
+                </div>
+                <div>
+                  <img src="" alt="" />
+                  <p></p>
+                </div>
               </div>
-              <div>
-                <span>
-                  <p>Tweets</p>
-                  <p>0</p>
-                </span>
-                <span>
-                  <p>Followers</p>
-                  <p>0</p>
-                </span>
-                <span>
-                  <p>Following</p>
-                  <p>0</p>
-                </span>
-              </div>
-            </div>
-            <div class="home-page-main__other-options">
-              <div>
-                <img src="" alt="" />
-                <p></p>
-              </div>
-              <div>
-                <img src="" alt="" />
-                <p></p>
-              </div>
-              <div>
-                <img src="" alt="" />
-                <p></p>
-              </div>
-              <div>
-                <img src="" alt="" />
-                <p></p>
-              </div>
-            </div>
-          </section>
-          <section class="home-page-main__tweets">
-            <nav class="home-page-main__tweets--details">
-              <a href="#">Tweets</a>
-              <a href="#">Tweets and Replies</a>
-              <a href="#">Medias</a>
-              <a href="#">Likes</a>
-            </nav>
-            <main></main>
-          </section>
-          <section class="home-page-main__trends-and-know">
-            <div class="home-page-main__trends">
-              <header>
-                <h3>Trends for you</h3>
-              </header>
-              <main>
-                <section>
-                  <div>
-                    <p>#spor</p>
-                    <img src="images/down.svg" alt="" />
+            </section>
+            <section class="home-page-main__tweets">
+              <nav class="home-page-main__tweets--details">
+                <a href="#">Tweets</a>
+                <a href="#">Tweets and Replies</a>
+                <a href="#">Medias</a>
+                <a href="#">Likes</a>
+              </nav>
+              <main class="home-page-main__tweets--list">
+                <section class="home-page-main__tweet">
+                  <div class="home-page-main__know--person-image">
+                    <img src="images/profile.svg" alt="" />
                   </div>
-                  <p>4.3M tweets</p>
-                </section>
-                <section>
-                  <div>
-                    <p>#spor</p>
-                    <img src="images/down.svg" alt="" />
+                  <div class="home-page-main__tweet--details">
+                    <header class="home-page-main__tweet--header">
+                      <div>
+                        <img src="images/retweet.svg" alt="">
+                        <p></p>
+                      </div>
+                      <div>
+                        <p></p>
+                        <p></p>
+                        <img src="images/clock.svg" alt="">
+                        <p></p>
+                      </div>
+                    </header>
+                    <main>
+                      <p></p>
+                      <div></div>
+                    </main>
+                    <footer class="home-page-main__tweet--options">
+                      <section>
+                        <img src="images/reply.svg" alt="">
+                        <p>45</p>
+                      </section>
+                      <section>
+                        <img src="images/retweet.svg" alt="">
+                        <p>98</p>
+                      </section>
+                      <section>
+                        <img src="images/like.svg" alt="">
+                        <p>589</p>
+                      </section>
+                      <section>
+                        <img src="images/share.svg" alt="">
+                      </section>
+                    </footer>
                   </div>
-                  <p>4.3M tweets</p>
-                </section>
-                <section>
-                  <div>
-                    <p>#spor</p>
-                    <img src="images/down.svg" alt="" />
-                  </div>
-                  <p>4.3M tweets</p>
-                </section>
-                <section>
-                  <div>
-                    <p>#spor</p>
-                    <img src="images/down.svg" alt="" />
-                  </div>
-                  <p>4.3M tweets</p>
                 </section>
               </main>
-              <footer>See more</footer>
-            </div>
-            <div class="home-page-main__know">
-              <header class="home-page-main__know--head">
-                <h3>You should follow</h3>
-              </header>
-              <main>
-                <section class="home-page-main__know--person">
-                  <div class="home-page-main__know--person-image">
-                    <img src="images/profile.svg" alt="" />
-                  </div>
-                  <div>
-                    <p class="home-page-main__know--person-name">Amirreza</p>
-                    <p class="home-page-main__know--person-id">@Amirreza1379</p>
-                  </div>
-                  <button class="home-page-main__know--person-follow-button">
-                    follow
-                  </button>
-                </section>
-                <section class="home-page-main__know--person">
-                  <div class="home-page-main__know--person-image">
-                    <img src="images/profile.svg" alt="" />
-                  </div>
-                  <div>
-                    <p class="home-page-main__know--person-name">Amirreza</p>
-                    <p class="home-page-main__know--person-id">@Amirreza1379</p>
-                  </div>
-                  <button class="home-page-main__know--person-follow-button">
-                    follow
-                  </button>
-                </section>
-                <section class="home-page-main__know--person">
-                  <div class="home-page-main__know--person-image">
-                    <img src="images/profile.svg" alt="" />
-                  </div>
-                  <div>
-                    <p class="home-page-main__know--person-name">Amirreza</p>
-                    <p class="home-page-main__know--person-id">@Amirreza1379</p>
-                  </div>
-                  <button class="home-page-main__know--person-follow-button">
-                    follow
-                  </button>
-                </section>
-              </main>
-              <footer>SEE ALL</footer>
-            </div>
-          </section>
-        </div>
+            </section>
+            <section class="home-page-main__trends-and-know">
+              <div class="home-page-main__trends">
+                <header>
+                  <h3>Trends for you</h3>
+                </header>
+                <main>
+                  <section>
+                    <div>
+                      <p>#spor</p>
+                      <img src="images/down.svg" alt="" />
+                    </div>
+                    <p>4.3M tweets</p>
+                  </section>
+                  <section>
+                    <div>
+                      <p>#spor</p>
+                      <img src="images/down.svg" alt="" />
+                    </div>
+                    <p>4.3M tweets</p>
+                  </section>
+                  <section>
+                    <div>
+                      <p>#spor</p>
+                      <img src="images/down.svg" alt="" />
+                    </div>
+                    <p>4.3M tweets</p>
+                  </section>
+                  <section>
+                    <div>
+                      <p>#spor</p>
+                      <img src="images/down.svg" alt="" />
+                    </div>
+                    <p>4.3M tweets</p>
+                  </section>
+                </main>
+                <footer>See more</footer>
+              </div>
+              <div class="home-page-main__know">
+                <header class="home-page-main__know--head">
+                  <h3>You should follow</h3>
+                </header>
+                <main>
+                  <section class="home-page-main__know--person">
+                    <div class="home-page-main__know--person-image">
+                      <img src="images/profile.svg" alt="" />
+                    </div>
+                    <div>
+                      <p class="home-page-main__know--person-name">Amirreza</p>
+                      <p class="home-page-main__know--person-id">@Amirreza1379</p>
+                    </div>
+                    <button class="home-page-main__know--person-follow-button">
+                      follow
+                    </button>
+                  </section>
+                  <section class="home-page-main__know--person">
+                    <div class="home-page-main__know--person-image">
+                      <img src="images/profile.svg" alt="" />
+                    </div>
+                    <div>
+                      <p class="home-page-main__know--person-name">Amirreza</p>
+                      <p class="home-page-main__know--person-id">@Amirreza1379</p>
+                    </div>
+                    <button class="home-page-main__know--person-follow-button">
+                      follow
+                    </button>
+                  </section>
+                  <section class="home-page-main__know--person">
+                    <div class="home-page-main__know--person-image">
+                      <img src="images/profile.svg" alt="" />
+                    </div>
+                    <div>
+                      <p class="home-page-main__know--person-name">Amirreza</p>
+                      <p class="home-page-main__know--person-id">@Amirreza1379</p>
+                    </div>
+                    <button class="home-page-main__know--person-follow-button">
+                      follow
+                    </button>
+                  </section>
+                </main>
+                <footer>SEE ALL</footer>
+              </div>
+            </section>
+          </div>
+        </main>
       </main>
-    </main>
+    </div>
+    <script src="javascript/main.js"></script>
   </body>
 </html>
